--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
   <title>Local Weather App</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
 
   <div class="wrapper">
-    test
-  </div>
-  <div class="temperature">
+
+    <h1>Free Code Camp Open Weather App</h1>
+
+    <article>
+      <h2></h2>
+      <div class="temperature"></div>
+      <div class="icon"></div>
+      <div class="weather-description">
+
+      </div>
+
+    </article>
+
+    <footer>Powered by <a href="https://openweathermap.org/">OpenWeather</a></footer>
+
+
+
+
 
   </div>
-  <div class="weather-description">
 
-  </div>
-  <div class="icon">
-    
-  </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
