toggle between F and C for temperature

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
     <article>
       <h2></h2>
-      <div class="temperature"></div>
-      <div class="icon"></div>
-      <div class="weather-description">
-
+      <div class="temp-reading">
+        <div class="temperature"></div><span id="unit">C&deg;</span>
       </div>
+      <a href="#" id="toggleUnit">Toggle Unit</a>
+
+      <div class="icon"></div>
+      <div class="weather-description"></div>
 
     </article>
 
